preventing the hand from collapsing when its empty, by conditonaly rendering an invisible card to fill it

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,12 +11,6 @@ hr {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-#footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
 #sidebar .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
     background-color: #9b8dc7;
     color: #47415c
@@ -29,6 +23,11 @@ hr {
 .task-subtitle {
     text-align: center;
     font-size: 30px;
+}
+
+.filler-card {
+    opacity: 0;
+    min-height: 315px;
 }
 
 #invisible {
